# wxwatcher

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/wxwatcher/: cli.py  config.py  notifier.py  watcher.py
tests/: test_config.py  test_notifier.py  test_watcher.py
