[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wxwatcher"
version = "0.1.1"
description = "A file change monitor that pushes notifications via WeChat"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["httpx"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
wxwatcher = "wxwatcher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
